(library
  (public_name sqlite3)
  (foreign_stubs
    (language c)
    (names sqlite3 sqlite3_stubs)
    (flags (:standard) -O2 -fPIC -DPIC))
  (c_library_flags -lpthread))

(rule
  (targets sqlite3.c sqlite3.h)
  (deps (glob_files_rec ../vendor/sqlite/*))
  (action
    (chdir ../sqlite_build
           (progn
             (run sh ../vendor/sqlite/configure)
             (run make sqlite3.c)
             (run cp sqlite3.c sqlite3.h ../src)))))
